<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+android:id/projectsList"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="#DFE0E1">

  <TableLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="5dip"
      android:layout_marginTop="5dip">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <TextView
          android:layout_width="0dip"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center"
          android:text="@string/label_projects"
          android:textSize="12dip"/>


      <TextView
          android:layout_width="0dip"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center"
          android:text="@string/label_initiating"
          android:textSize="12dip"/>


      <TextView
          android:layout_width="0dip"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center"
          android:text="@string/label_planning"
          android:textSize="12dip"/>


      <TextView
          android:layout_width="0dip"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center"
          android:text="@string/label_executing"
          android:textSize="12dip"/>


      <TextView
          android:layout_width="0dip"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center"
          android:text="@string/label_controlling"
          android:textSize="12dip"/>


      <TextView
          android:layout_width="0dip"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center"
          android:text="@string/label_closing"
          android:textSize="12dip"/>
    </TableRow>
  </TableLayout>

  <ImageView
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="5dip"
      android:paddingBottom="2dp"
      android:paddingLeft="5dp"
      android:paddingRight="5dp"
      android:paddingTop="2dp"
      android:scaleType="fitXY"
      android:src="@android:drawable/divider_horizontal_dark"/>

  <TableLayout
      android:id="@+id/tableProjects"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
  </TableLayout>

</LinearLayout>